# parallel_algorithms

./: CMakeLists.txt  README  integral.c  multiplication.cpp  thermal_conductivity_sync.cpp
